# isbe

./: .gitignore  c_tree.txt  dual_tree.7z  hog_data.mat  r_tree.txt  startup.m  subdirs2path.m
cxx/nailfold/: CMakeLists.txt  SettingUp.txt  ncm_annotation.cxx  ncm_annotation.h  ncm_annotation_io.cxx  ncm_apex.cxx  ncm_apex.h  ncm_apex_io.cxx  ncm_apt_controller.cxx  ncm_apt_controller.h  ncm_apt_controller_base.cxx  ncm_apt_controller_base.h  ncm_apt_null_controller.cxx  ncm_apt_null_controller.h  ncm_apt_server.cxx  ncm_apt_server.h  ncm_camera.cxx  ncm_camera.h  ncm_encrypt.cxx  ncm_encrypt.h  ncm_frame_aligner.cxx  ncm_frame_aligner.h  ncm_haemorrhage.cxx  ncm_haemorrhage.h  ncm_haemorrhage_io.cxx  ncm_hand.h  ncm_image_grade.cxx  ncm_image_grade.h  ncm_image_server.cxx  ncm_image_server.h  ncm_lumenera_camera.cxx  ncm_lumenera_camera.h  ncm_mosaic_maker.cxx  ncm_mosaic_maker.h  ncm_registry_accessor.cxx  ncm_registry_accessor.h  ncm_scp_handler.cxx  ncm_scp_handler.h  ncm_server_handler.cxx  ncm_server_handler.h  (+24 more)
cxx/nailfold/Templates/: vil_gaussian_derivatives+vxl_byte.double-.cxx  vil_gaussian_derivatives+vxl_byte.float-.cxx
cxx/nailfold/flow/: CMakeLists.txt  NAG_notes.txt  ncm_flow_charbonnier_robustifier.h  ncm_flow_cost_function.cxx  ncm_flow_cost_function.h  ncm_flow_cost_function_cholmod.cxx  ncm_flow_cost_function_cholmod.h  ncm_flow_cost_function_nag.cxx  ncm_flow_cost_function_nag.h  ncm_flow_cost_function_sparselm.cxx  ncm_flow_cost_function_sparselm.h  ncm_flow_cost_function_vxl.cxx  ncm_flow_cost_function_vxl.h  ncm_flow_estimator.cxx  ncm_flow_estimator.h  ncm_flow_estimator_cholmod.cxx  ncm_flow_estimator_cholmod.h  ncm_flow_estimator_nag.cxx  ncm_flow_estimator_nag.h  ncm_flow_estimator_sparselm.cxx  ncm_flow_estimator_sparselm.h  ncm_flow_estimator_vxl.cxx  ncm_flow_estimator_vxl.h  ncm_flow_field.cxx  ncm_flow_field.h  ncm_flow_geman-mcclure_robustifier.h  ncm_flow_lorentzian_robustifier.h  ncm_flow_minimizer.cxx  ncm_flow_minimizer.h  ncm_flow_null_robustifier.h  ncm_flow_robustifier.h
cxx/nailfold/flow/tools/: CMakeLists.txt  ncm_estimate_flow.cxx
cxx/nailfold/qtools/: CMakeLists.txt  convert_ncm_video_frame_to_qimage.h  nailfold_graphics_view.cxx  nailfold_graphics_view.h  ncm_exposure_spinbox.cpp  ncm_exposure_spinbox.h  ncm_image_sequence.cxx  ncm_image_sequence.h  ncm_image_sequence_io.cxx  ncm_image_session.cxx  ncm_image_session.h  ncm_image_session_io.cxx  ncm_qapexitem.cxx  ncm_qapexitem.h  ncm_qapexitem_appearance.cxx  ncm_qapexitem_appearance.h  ncm_qapexitem_p.cxx  ncm_qapt_server.cxx  ncm_qapt_server.h  ncm_qdata_manager.cxx  ncm_qdata_manager.h  ncm_qdata_processor.cxx  ncm_qdata_processor.h  ncm_qdata_saver.cxx  ncm_qdata_saver.h  ncm_qdata_stream.cxx  ncm_qdata_stream.h  ncm_qframe_aligner.cxx  ncm_qframe_aligner.h  ncm_qframe_aligner_file.cxx  ncm_qframe_aligner_file.h  ncm_qframe_aligner_live.cxx  ncm_qframe_aligner_live.h  ncm_qglobal.h  ncm_qhaemorrhageitem.cxx  ncm_qhaemorrhageitem.h  ncm_qhaemorrhageitem_appearance.cxx  ncm_qhaemorrhageitem_appearance.h  ncm_qhaemorrhageitem_p.cxx  ncm_qimagehandler.cxx  (+32 more)
cxx/nailfold/qtools/ncm_cameras/: CMakeLists.txt  dmk_listener.cpp  dmk_listener.h  ncm_camera.cxx  ncm_camera.h  ncm_dmk_camera.cxx  ncm_dmk_camera.h  ncm_dmk_grab_frame_filter.cxx  ncm_dmk_grab_frame_filter.h  ncm_lumenera_camera.cxx  ncm_lumenera_camera.h  ncm_qcamera_gui.cxx  ncm_qcamera_gui.h
cxx/nailfold/qtools/ncm_qapt_util/: CMakeLists.txt  ncm_qapt_gui_graphicsview.cxx  ncm_qapt_gui_graphicsview.h  ncm_qapt_util.cpp  ncm_qapt_util_gui.cpp  ncm_qapt_util_gui.h  ncm_qapt_util_gui.ui
cxx/nailfold/qtools/ncm_qcapture/: CMakeLists.txt  ncm_qcapture.cpp  ncm_qcapture.qrc  ncm_qcapture_aligner.cxx  ncm_qcapture_aligner.h  ncm_qcapture_data_manager.cxx  ncm_qcapture_data_manager.h  ncm_qcapture_data_stream.h  ncm_qcapture_end_sequence.cpp  ncm_qcapture_end_sequence.h  ncm_qcapture_end_sequence.ui  ncm_qcapture_end_session.cpp  ncm_qcapture_end_session.h  ncm_qcapture_end_session.ui  ncm_qcapture_graphicsview.cxx  ncm_qcapture_graphicsview.h  ncm_qcapture_gui.cpp  ncm_qcapture_gui.h  ncm_qcapture_gui.ui  ncm_qcapture_mosaic_maker.cxx  ncm_qcapture_mosaic_maker.h  ncm_qcapture_new_subject.cpp  ncm_qcapture_new_subject.h  ncm_qcapture_new_subject.ui  ncm_qcapture_options.cpp  ncm_qcapture_options.h  ncm_qcapture_options.ui  ncm_qcapture_preferences.cpp  ncm_qcapture_preferences.h  ncm_qcapture_processor.cxx  ncm_qcapture_processor.h  ncm_qcapture_saver.cpp  ncm_qcapture_saver.h  ncm_qcapture_scene.cxx  ncm_qcapture_scene.h  ncm_qcapture_search.cpp  ncm_qcapture_search.h  ncm_qcapture_search.ui
cxx/nailfold/qtools/ncm_qcapture2/: CMakeLists.txt  ncm_qcapture2.cpp  ncm_qcapture2_data_manager.cxx  ncm_qcapture2_data_manager.h  ncm_qcapture2_graphicsview.cxx  ncm_qcapture2_graphicsview.h  ncm_qcapture2_gui.cpp  ncm_qcapture2_gui.h  ncm_qcapture2_gui.ui  ncm_qcapture2_gui_old.ui  ncm_qcapture2_processor.cxx  ncm_qcapture2_processor.h  ncm_qcapture2_saver.cpp  ncm_qcapture2_saver.h
cxx/nailfold/qtools/ncm_qfinal/: CMakeLists.txt  ncm_qfinal.cpp  ncm_qfinal_gui.cpp  ncm_qfinal_gui.h  ncm_qfinal_gui.ui  ncm_qfinal_options.cpp  ncm_qfinal_options.h  ncm_qfinal_options.ui  ncm_qfinal_preferences.cxx  ncm_qfinal_preferences.h  ncm_qfinal_search.cpp  ncm_qfinal_search.h  ncm_qfinal_search.ui
cxx/nailfold/qtools/ncm_qmarkup/: CMakeLists.txt  ncm_qmarkup.cpp  ncm_qmarkup.qrc  ncm_qmarkup_gui.cpp  ncm_qmarkup_gui.h  ncm_qmarkup_gui.ui  ncm_qmarkup_options.cpp  ncm_qmarkup_options.h  ncm_qmarkup_preferences.cxx  ncm_qmarkup_preferences.h  ncm_qmarkup_server.cxx  ncm_qmarkup_server.h  ncm_qsite_selector.cpp
cxx/nailfold/qtools/ncm_qsandpit/: CMakeLists.txt  (+1 more)
cxx/nailfold/tests/: CMakeLists.txt  ncm_test.cxx  ncm_test_dtcwt.cxx  ncm_test_find_connected_components.cxx  ncm_test_gaussian_2nd_derivative.cxx  ncm_test_image_server.cxx  ncm_test_registry_accessor.cxx  ncm_test_sharpness_evaluator.cxx  ncm_test_vessel_properties_io.cxx
cxx/nailfold/tools/: CMakeLists.txt  ncm_encrypt_string.cxx  ncm_sandpit.cxx  ncm_thorlabs.cxx
(+2630 files in other folders)
